# Resume-Optimizer

./: .gitignore  HOWTO.md  README.md  compose.yaml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  resume_optimizer.db
backend/docs/: BACKEND_FOLDER_SCHEMA.md  EXCEPTION_PATTERN.md
backend/docs/implementation/: ALDEN_CAM_IMPLEMENTATION.md  AMARJOT_SANDHU_IMPLEMENTATION.md  EREN_UGUR_IMPLEMENTATION.md  JOHN_HAYALI_IMPLEMENTATION.md  REMINGTON_STEELE_IMPLEMENTATION.md  TEAM_DEPENDENCIES_AND_ORDER.md
backend/scripts/: check_backend.sh
backend/src/app/: main.py
backend/src/app/core/: auth.py  database.py  dependencies.py  errors.py  settings.py
backend/src/app/exceptions/: auth_exceptions.py  job_posting_exceptions.py  optimize_exceptions.py  platform_exceptions.py  resume_exceptions.py
backend/src/app/models/: __init__.py  job_posting.py  job_posting_skill.py  keyword.py  optimization_run.py  password_reset_token.py  refresh_token.py  resume.py  resume_skill.py  user.py
backend/src/app/repository/: auth_repository.py  job_posting_repository.py  optimization_repository.py  resume_repository.py
backend/src/app/routes/: auth.py  job_postings.py  optimize.py  resumes.py
backend/src/app/schemas/: auth.py  job_posting.py  optimize.py  pagination.py  resume.py
backend/src/app/services/: ai_client.py  auth_service.py  document_render_service.py  keyword_service.py  optimize_service.py  password_reset_service.py  prompt_builder.py  resume_parse_service.py  resume_skill_service.py  resume_upload_service.py  scrape_service.py  storage_service.py
backend/src/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/test/: conftest.py
backend/src/test/fixtures/: sample_resume.docx
(+112 files in other folders)
