[project]
name = "backend"
version = "0.1.0"
description = "Resume Optimizer backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[all]>=0.115.0",
    "sqlalchemy>=2.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
