[project]
name = "backend"
version = "0.1.0"
description = "Resume Optimizer backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[all]>=0.115.0",
    "sqlalchemy>=2.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "openai>=1.106.1",
    "psycopg[binary]>=3.2.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pydantic-settings>=2.0.0",
    "pwdlib[argon2]>=0.2.0",
    "PyJWT>=2.8.0",
    "email-validator>=2.0.0",
    "pdfplumber>=0.11.9",
    "python-docx>=1.2.0",
    "reportlab>=4.2.0",
    "testcontainers[postgres]>=4.8.0",
]
